--- a/src/res/info.plist
+++ b/src/res/info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>MOOSE</string>
 	<key>LSMinimumSystemVersion</key>
-	<string></string>
+	<string>10.9</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>© 2023 Moose Photo Print Ltd.</string>
 	<key>NSMainNibFile</key>
